@@ -144,10 +144,6 @@ Aligned position on screen, may be top_left, top_right, bottom_left, bottom_righ
 Boolean value, if true, Conky will be forked to background when started
 
 .TP 
-\fB\*(T<\fBon_bottom\fR\*(T>\fR
-Set Conky on the bottom of all other applications
-
-.TP 
 \fB\*(T<\fBborder_margin\fR\*(T>\fR
 Border margin in pixels
 
