@@ -1,5 +1,9 @@
 # $Id$
 
+2006-11-10
+	* Remove on_bottom and xmms_player completely.
+	* Closed bug #1591609 by adding a check for arguments with ibm_temps.
+
 2006-11-09
 	* Updated vim and nano syntax coloring scripts.
 	* Added extras/ dir with syntax stuff to distribution tarball.
